Fix on mobile

--- a/packages/react/src/components/header/Header.scss
+++ b/packages/react/src/components/header/Header.scss
@@ -11,7 +11,7 @@
     color: $accent-color;
   }
 
-  .header-toolbar {
+  .dx-toolbar.header-toolbar {
     padding-right: $content-padding;
 
     .user-button.authorization {
