--- a/packages/react/src/pages/planning-task-list/planning-task-list.scss
+++ b/packages/react/src/pages/planning-task-list/planning-task-list.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   flex-grow: 1;
 
-  .toolbar-common {
+  .dx-toolbar.toolbar-common {
     padding: 20px $content-padding $content-padding;
 
     .toolbar-header {
